--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,12 +23,13 @@ body {
   position: fixed;
   z-index: 100;
 }
-.navbar h2 {
+.navbar .logo {
   font-size: 36px;
   font-weight: 700;
   color: #daae15;
+  transition: 0.4s;
 }
-.navbar h2 span {
+.navbar .logo span {
   display: inline-block;
   color: #3d3d3d;
   font-weight: 700;
@@ -95,6 +96,7 @@ body {
   font-weight: 700;
   margin-bottom: 20px;
   font-size: 32px;
+  transition: 0.4s;
 }
 .container .content p {
   width: 480px;
@@ -109,7 +111,7 @@ body {
   background-color: #daae15;
   font-weight: 600;
   border-radius: 5px;
-  transition: 0.2s;
+  transition: 0.4s;
 }
 .container .content .btn:hover {
   background: #c49d13;
@@ -130,11 +132,15 @@ body {
   background: #eaeaea;
   border: 20px solid #daae15;
   z-index: -1;
+  box-shadow: 15px -15px 30px 5px rgba(0, 0, 0, 0.4);
+  transition: 0.4s;
 }
+
 .container .img-container .cube img {
-  width: 700px;
+  width: 600px;
   position: absolute;
-  transform: translate(-250px, 150px) rotateZ(-45deg);
+  transform: translate(-200px, 100px) rotateZ(-45deg);
+  transition: 0.2s;
 }
 .container .square {
   width: 750px;
@@ -145,4 +151,33 @@ body {
   background-color: #daae15;
   transform: rotateZ(45deg);
   z-index: -2;
+  transition: 0.4s;
+}
+
+.container .cars {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  transform: translateX(-10%);
+  align-items: center;
+  justify-content: center;
+}
+.container .cars .mark {
+  margin-top: 40px;
+  position: absolute;
+  bottom: 70px;
+}
+.container .cars .mark a {
+  color: #3d3d3d;
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 0.8px;
+  text-transform: uppercase;
+  padding: 0px 20px;
+  transition: 0.3s;
+}
+.container .cars .mark a:hover {
+  font-size: 16px;
+  letter-spacing: 0.4px;
 }
