--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,20 +7,19 @@
   text-decoration: none;
   font-family: "Poppins", sans-serif;
 }
-img::selection {
-  background: transparent;
-}
 body {
   background: #eaeaea;
-  overflow: hidden;
+  overflow-x: hidden;
+  max-width: 1500px;
+  margin: auto;
 }
 .navbar {
   width: 100%;
-  padding: 30px 10%;
+  padding: 30px 10% 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  position: relative;
   z-index: 100;
 }
 .navbar .logo {
@@ -35,6 +34,17 @@ body {
   font-weight: 700;
   font-size: 36px;
 }
+.toggleMenu {
+  background: url(/src/img/menu.png) no-repeat;
+  background-size: 30px;
+  height: 40px;
+  width: 40px;
+  filter: invert(0.7);
+  background-position: center;
+  position: absolute;
+  right: 5%;
+  display: none;
+}
 .navbar ul {
   display: flex;
   align-items: center;
@@ -48,10 +58,13 @@ body {
   font-size: 15px;
   font-weight: 500;
   transition: 0.2s;
+  position: relative;
 }
-.navbar ul li a:hover {
-  color: #daae15;
-  transform: scale(1.2);
+.navbar ul li {
+  transition: 0.3s;
+}
+.navbar ul li:hover {
+  transform: translateY(-5px);
 }
 .navbar .social ul {
   display: flex;
@@ -69,10 +82,10 @@ body {
   transition: 0.2s;
 }
 .navbar .social ul li a:hover {
-  border-color: #eaeaea;
+  border-color: #3d3d3d;
 }
 .navbar .social ul li a i {
-  color: #eaeaea;
+  color: #3d3d3d;
   transform: rotateZ(-45deg);
   font-size: 20px;
 }
@@ -82,8 +95,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100vh;
-  padding: 50px 10% 0;
+  padding: 0px 5% 0 10%;
+}
+.container .content {
+  z-index: 3;
 }
 .container .content h1 {
   font-size: 42px;
@@ -107,77 +122,141 @@ body {
 }
 .container .content .btn {
   padding: 10px 20px;
+  position: relative;
   color: #eaeaea;
   background-color: #daae15;
   font-weight: 600;
   border-radius: 5px;
   transition: 0.4s;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  cursor: pointer;
 }
 .container .content .btn:hover {
-  background: #c49d13;
+  transform: scale(1.2);
 }
 
 /* Image container */
 .container .img-container {
   position: relative;
-  width: 400px;
-  height: 400px;
-  right: -15%;
-}
-.container .img-container .cube {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  transform: rotateZ(45deg);
-  background: #eaeaea;
-  border: 20px solid #daae15;
-  z-index: -1;
-  box-shadow: 15px -15px 30px 5px rgba(0, 0, 0, 0.4);
-  transition: 0.4s;
-}
-
-.container .img-container .cube img {
-  width: 600px;
-  position: absolute;
-  transform: translate(-200px, 100px) rotateZ(-45deg);
-  transition: 0.2s;
-}
-.container .square {
-  width: 750px;
-  height: 750px;
-  position: absolute;
-  right: -35%;
-  top: -35%;
-  background-color: #daae15;
-  transform: rotateZ(45deg);
-  z-index: -2;
-  transition: 0.4s;
-}
-
-.container .cars {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  width: 500px;
+  height: 500px;
   display: flex;
-  transform: translateX(-10%);
   align-items: center;
   justify-content: center;
 }
-.container .cars .mark {
-  margin-top: 40px;
+
+.container .img-container img {
+  width: 100%;
   position: absolute;
-  bottom: 70px;
 }
-.container .cars .mark a {
+.cars {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cars .mark {
+  height: 20px;
+  position: relative;
+}
+.cars .mark li {
+  display: inline-block;
+  transition: 0.3s;
+}
+.cars .mark a {
   color: #3d3d3d;
   font-size: 15px;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 0.8px;
   text-transform: uppercase;
   padding: 0px 20px;
   transition: 0.3s;
 }
-.container .cars .mark a:hover {
-  font-size: 16px;
-  letter-spacing: 0.4px;
+.cars .mark li:hover {
+  transform: translateY(-5px);
+}
+
+/* Responsive screen */
+@media (max-width: 1100px) {
+  .navbar {
+    padding: 30px 5%;
+  }
+  .container {
+    padding: 0 5%;
+  }
+  .container .content {
+    width: 60vw;
+  }
+  .container .content h1 {
+    font-size: 38px;
+  }
+  .container .content h3 {
+    font-size: 34px;
+  }
+  .container .content p {
+    max-width: 340px;
+  }
+}
+
+@media (max-width: 980px) {
+  .social {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .social ul {
+    flex-direction: column;
+  }
+  .social ul li {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 940px) {
+  .container .content h1 {
+    font-size: 32px;
+  }
+  .container .content h3 {
+    font-size: 28px;
+  }
+}
+@media (max-width: 820px) {
+  .container {
+    flex-direction: column;
+  }
+  .container .content {
+    width: 100%;
+    padding-top: 10%;
+  }
+  .container .content h1 {
+    font-size: 44px;
+  }
+  .container .content h3 {
+    font-size: 40px;
+  }
+  .container .content p {
+    max-width: 440px;
+  }
+  .container .content .btn {
+    padding: 10px 40px;
+  }
+  .container .img-container img {
+    width: 450px;
+    margin-bottom: 0;
+  }
+  .cars {
+    padding-bottom: 50px;
+  }
+}
+
+@media (max-width: 700px) {
+  .navbar ul {
+    display: none;
+  }
+  .navbar .toggleMenu {
+    display: inline-block;
+  }
 }
