--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,7 +43,22 @@ body {
   background-position: center;
   position: absolute;
   right: 5%;
+  cursor: pointer;
   display: none;
+}
+
+.toggleMenu.active {
+  background: url(/src/img/close.png) no-repeat;
+  background-size: 25px;
+  height: 40px;
+  width: 40px;
+  filter: invert(0.7);
+  background-position: center;
+  position: absolute;
+  right: 5%;
+  cursor: pointer;
+  display: none;
+  z-index: 2;
 }
 .navbar ul {
   display: flex;
@@ -239,6 +254,7 @@ body {
   }
   .container .content p {
     max-width: 440px;
+    padding-right: 80px;
   }
   .container .content .btn {
     padding: 10px 40px;
@@ -258,5 +274,58 @@ body {
   }
   .navbar .toggleMenu {
     display: inline-block;
+  }
+  .navbar .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 100vw;
+    z-index: 1;
+    visibility: hidden;
+    transition: 0.3s;
+    opacity: 0;
+    background-color: #eaeaea;
+  }
+  .navbar .navigation.active {
+    visibility: visible;
+    opacity: 1;
+  }
+  .navbar .navigation li a {
+    font-size: 26px;
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 630px) {
+  .container .content h1 {
+    font-size: 38px;
+  }
+  .container .content h3 {
+    font-size: 32px;
+  }
+  .container .content p {
+    max-width: 360px;
+  }
+  .container .content .btn {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+  .container .img-container img {
+    max-width: 400px;
+  }
+  .cars .mark {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw;
+  }
+  .cars .mark a {
+    font-size: 14px;
+    padding: 0 8px;
   }
 }
