--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -111,6 +111,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 0px 5% 0 10%;
+  height: 100%;
 }
 .container .content {
   z-index: 3;
@@ -168,14 +169,19 @@ body {
 }
 .cars {
   width: 100%;
+  max-width: 1500px;
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .cars .mark {
+  width: 100%;
   height: 20px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .cars .mark li {
   display: inline-block;
@@ -195,6 +201,16 @@ body {
 }
 
 /* Responsive screen */
+@media (min-width: 1400px) {
+  .container,
+  .cars .mark {
+    margin: auto;
+    transform: scale(1.3);
+    width: 100%;
+    padding: 0 15%;
+    height: 100%;
+  }
+}
 @media (max-width: 1100px) {
   .navbar {
     padding: 30px 5%;
